[gd_scene load_steps=16 format=3 uid="uid://w0yoa6h4yxdq"]

[ext_resource type="Script" path="res://Scripts/goal_automata/checkpoint.gd" id="1_k8q60"]
[ext_resource type="Texture2D" uid="uid://buoujuogfhshg" path="res://Assets/img/drawing_board/cancel_button.png" id="3_8akqn"]
[ext_resource type="PackedScene" uid="uid://dm7js7ewang84" path="res://Scenes/DrawingBoard/checkpoint/init_predicates_button.tscn" id="3_ivaoq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhfke"]
bg_color = Color(0.0313726, 0.137255, 0.141176, 1)
border_color = Color(0.184314, 0.462745, 0.470588, 1)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48

[sub_resource type="Theme" id="Theme_ifur8"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_vhfke")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47x43"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kd5mp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmp1r"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06owb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nk130"]
content_margin_left = 1.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wj61"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0.909804, 0.470588, 0.780392, 0)

[sub_resource type="Theme" id="Theme_m68ig"]
Button/styles/disabled = SubResource("StyleBoxFlat_kd5mp")
Button/styles/focus = SubResource("StyleBoxFlat_qmp1r")
Button/styles/hover = SubResource("StyleBoxFlat_06owb")
Button/styles/normal = SubResource("StyleBoxFlat_nk130")
Button/styles/pressed = SubResource("StyleBoxFlat_0wj61")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkgn8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7bnq"]
bg_color = Color(0.239216, 0.52549, 0.54902, 1)
border_color = Color(0, 0.423529, 0.533333, 1)
corner_radius_top_left = 96
corner_radius_top_right = 96
corner_radius_bottom_right = 10
corner_radius_bottom_left = 96

[sub_resource type="Theme" id="Theme_343i2"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_n7bnq")

[node name="Checkpoint3" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_k8q60")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = -356.0
offset_right = 356.0
offset_bottom = 360.0
theme = SubResource("Theme_ifur8")

[node name="PanelItems" type="VBoxContainer" parent="UI/MainPanel"]
layout_mode = 2

[node name="Padding" type="Panel" parent="UI/MainPanel/PanelItems"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_47x43")

[node name="CancelButton" type="Button" parent="UI/MainPanel/PanelItems/Padding"]
layout_mode = 0
offset_left = 632.0
offset_top = 8.0
offset_right = 738.0
offset_bottom = 114.0
scale = Vector2(0.5, 0.5)
theme = SubResource("Theme_m68ig")
icon = ExtResource("3_8akqn")

[node name="ImageAndPredicates" type="HBoxContainer" parent="UI/MainPanel/PanelItems"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="MainImagePanel" type="Panel" parent="UI/MainPanel/PanelItems/ImageAndPredicates"]
custom_minimum_size = Vector2(280, 192)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kkgn8")

[node name="MainImage" type="PanelContainer" parent="UI/MainPanel/PanelItems/ImageAndPredicates/MainImagePanel"]
layout_mode = 0
offset_left = 44.0
offset_right = 236.0
offset_bottom = 192.0
theme = SubResource("Theme_343i2")

[node name="Label" type="Label" parent="UI/MainPanel/PanelItems/ImageAndPredicates/MainImagePanel/MainImage"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 128
text = "-1"
horizontal_alignment = 1

[node name="PredicateContainer" type="VBoxContainer" parent="UI/MainPanel/PanelItems/ImageAndPredicates"]
custom_minimum_size = Vector2(320, 200)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 27

[node name="InitPredicatesContainer" parent="UI/MainPanel/PanelItems/ImageAndPredicates/PredicateContainer" instance=ExtResource("3_ivaoq")]
layout_mode = 2

[connection signal="gui_input" from="UI/MainPanel" to="." method="_on_main_panel_gui_input"]
[connection signal="mouse_entered" from="UI/MainPanel" to="." method="_on_main_panel_mouse_entered"]
[connection signal="resized" from="UI/MainPanel" to="." method="_reposition_arcs"]
